# cobbler

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build-daemon.yml
.junie/: guidelines.md
cli/: Cargo.toml  Makefile  README.md  go.mod
cli/cmd/cobbler/: main.go
cli/src/: main.rs
daemon/: Cargo.toml  Containerfile  Containerfile.build  Makefile  README.md  cobblerd.service  go.mod  go.sum
daemon/cmd/cobblerd/: main.go
daemon/src/: main.rs
rest/: README.md
web/: README.md
