[package]
name = "cobblerd"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
apt-pkg-native = "0.3.3"

[dependencies]
axum = "0.7"
gethostname = "0.5"
mdns-sd = "0.9.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
