[package]
name = "cobblerd"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
apt-pkg-native = "0.3.3"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
gethostname = "0.5"
mdns-sd = "0.9.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
maintainer = "Hendrik Brandt <github.com.nanometer045@passmail.net>"
copyright = "2026, Hendrik Brandt <github.com.nanometer045@passmail.net>"
license-file = ["../LICENSE", "0"]
depends = "$auto, libapt-pkg7.0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cobblerd", "/usr/bin/cobblerd", "755"],
]
